# splat-forge

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  restart_vite.sh  setup.sh  tsconfig.app.json  vite.config.ts
scripts/: bg_remove.py  dev.mjs  render_novel_views.py
src/: App.tsx  App_old.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pipeline.rs
src/components/: Home.tsx  MediaProject.tsx  PersistentSplat.tsx  WorldGen.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx
